- fixed problem in HTTPURIResolver with extraction of fragment id. Now a query is cut off from the fragment if present - fixed problem in AbstractConnector: getURIWithoutFragment now preserves a query string if present - task.xml now contains default values for boolean nodes - changed edit-item.xql to use only one param 'timestamp'. The mode is determined by the existence of a timestamp. If none the mode is 'new' else 'edit' - added 'save and close' button to edit-item.xql - added sums for days and hours to list-items.xql - adding, editing and filtering working in index.xql now

--- a/src/main/xrx/timetracker/resources/InlineRoundBordersAlert.css
+++ b/src/main/xrx/timetracker/resources/InlineRoundBordersAlert.css
@@ -96,6 +96,10 @@
     height:15px;
     border:solid 1px;
 }
+.InlineRoundBordersAlert .xsdBoolean .xfValue{
+    -moz-border-radius:0;
+    -webkit-border-radius:0;
+}
 
 .InlineRoundBordersAlert .xfAlert {
     display: block;
